# eiq-onnx2tflite

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  NOTICE  README.md  SBOM.spdx.json  pyproject.toml  requirements-accuracy.txt  requirements-dev.txt  requirements.txt
.sourcegraph/: ignore
docs/: code_tags.md  increasing_dependencies_versions.md  new_operator_support.md  project_development_basics.md
licenses/: LICENSE_MIT
onnx2quant/: __main__.py  preprocessor.py  qdq_quantization.py  quantization_config.py
onnx2quant/preprocessing_steps/: base_preprocessing_step.py  replace_constant_with_static_tensor.py  replace_div_with_quantizable_mul.py
onnx2tflite/: __init__.py  __main__.py
onnx2tflite/src/: conversion_config.py  conversion_context.py  logger.py  model_inspector.py  model_shape_inference.py  tensor_format_inference.py  tensor_formatting.py
onnx2tflite/src/converter/: conversion_preprocessor.py  convert.py  node_converter.py  tensor_utils.py  (+1 more)
tests/: conftest.py  data_loader.py  download_models.py  executors.py  model_builder_utils.py  model_surgeon.py  test_cmd.py  test_logger.py  test_model_surgeon.py  test_shape_inference.py
tests/converter/: enabled_onnx_tests.py  full_model_testing_utils.py  test_convert.py  test_convert_abs.py  test_convert_add.py  test_convert_and.py  test_convert_arg_max.py  test_convert_arg_min.py  test_convert_average_pool.py  test_convert_batch_normalization.py  test_convert_cast.py  test_convert_ceil.py  test_convert_clip.py  test_convert_concat.py  test_convert_constant.py  test_convert_constant_of_shape.py  test_convert_conv.py  test_convert_conv_transpose.py  test_convert_cos.py  test_convert_cum_sum.py  test_convert_depth_to_space.py  test_convert_dequantize_linear.py  test_convert_div.py  test_convert_dropout.py  test_convert_einsum.py  test_convert_elu.py  test_convert_equal.py  test_convert_erf.py  test_convert_exp.py  test_convert_expand.py  test_convert_flatten.py  test_convert_floor.py  test_convert_gather.py  test_convert_gather_nd.py  test_convert_gelu.py  test_convert_gemm.py  test_convert_global_average_pool.py  test_convert_global_max_pool.py  test_convert_greater.py  test_convert_greater_or_equal.py  (+76 more)
tests/generator/: test_add.py
tests/onnx_parser/: test_model_proto.py
tests/pattern_matcher/: test_pattern_matcher.py
tests/preprocessing/: test_conversion_preprocessing.py
tests/quantizer/: test_preprocessor.py  test_quantizer.py
tests/tflite_optimizer/: test_activation_function_fusing.py  test_cast_pruning.py  test_eliminate_dead_branches.py  test_fully_connected_add_fusing.py  test_fuse_quantize_into_preceding_ops.py  test_hard_sigmoid_and_mul_combining.py  test_keep_one_empty_buffer.py  test_moving_activation_before_concat.py  test_permute_fully_connected_weights_after_reshape.py  test_prune_transpose_operators.py  test_quantize_pruning.py  test_remove_cancelling_transposes.py  test_remove_unnecessary_ops_before_flattened_conv.py  test_remove_unused_tensors_and_buffers.py  test_replace_average_pool_before_fully_connected_with_sum.py  test_replace_input_invariant_transpose_with_reshape.py  test_reshape_fusing.py  test_transpose_fusing.py
utils/: Makefile  generate_synthetic_dataset.py  json_to_onnx.py  onnx_model_get_ops.py  onnx_to_json.py  overwrite_version.py  print_intermediate_errors.py  qdq_analyzer.py  update_onnx_test_list.py
(+374 files in other folders)
