[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["onnx2tflite*", "onnx2quant*"]

[tool.setuptools.dynamic]
version = { attr = "onnx2tflite.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }

[project]
name = "eiq-onnx2tflite"
authors = [
    { name = "NXP" },
]
dynamic = ["version", "dependencies"]
description = "ONNX2TFLite project offers tools for ONNX models quantization and their conversion into TFLite"
license = { text = "PROPRIETARY" }
keywords = ["nxp", "eiq", "toolkit", "converter", "quantizer", "onnx", "tflite"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Intended Audience :: Developers",
]

[project.urls]
url = "https://www.nxp.com"

[project.entry-points.console_scripts]
onnx2tflite = "onnx2tflite.__main__:run_conversion"
onnx2quant = "onnx2quant.__main__:run_quantization"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "thirdparty/",
    "utils/",
    "onnx2tflite/lib",
    "tests/"
]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
# Allow all linting rules and then ignore those that do not make sense/cause problems
# The complete list of Ruff rules: https://docs.astral.sh/ruff/rules/
select = [
    "ALL"
]
# If a linting rule does more harm than good, ignore it.
# But every rule ignore must have an explanation of why!
ignore = [
    "ERA001",  # "Found commented-out code", incompatible with NXP license headers
    "D100",    # "Missing docstring in public module", incompatible with NXP license headers
    "D104",    # "Missing docstring in public package", incompatible with NXP license headers
    "D203",    # Incompatible with D211 rule
    "D213",    # Incompatible with D212 rule
    "COM812",  # Conflicts with "ruff format" command
    "ISC001",  # Conflicts with "ruff format" command
    "TC006", # Add quotes to type expression in `typing.cast()` - conflict with IDE imports
]
